# localhost-pages

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/explainer/: index.html  meta.json  reveal.js  style.css
docs/explainer/accents/: index.html
docs/explainer/assets/: index.html
docs/explainer/bootstrap/: index.html
docs/explainer/delete/: index.html
docs/explainer/edit/: index.html
docs/explainer/help/: index.html
docs/explainer/icons/: index.html
docs/explainer/index/: index.html
docs/explainer/init/: index.html
docs/explainer/inject/: index.html
docs/explainer/keys/: index.html
docs/explainer/logconfig/: index.html
docs/explainer/lp-log/: index.html
docs/explainer/main/: index.html
docs/explainer/peek/: index.html
docs/explainer/pin/: index.html
docs/explainer/pubsub/: index.html
docs/explainer/registry/: index.html
docs/explainer/reload/: index.html
docs/explainer/search/: index.html
docs/explainer/server/: index.html
docs/explainer/sort/: index.html
docs/explainer/styles/: index.html
docs/explainer/template/: index.html
scripts/: fetch-assets.sh  install-launchd.sh  install-systemd.sh  install-task.ps1  launchd.plist.template  localhost-pages.service.template  pf-anchor.conf
src/localhost_pages/: __main__.py  accents.py  bootstrap.py  icons.py  index.py  inject.py  logconfig.py  pubsub.py  registry.py  server.py  watcher.py
tests/: conftest.py  test_accents.py  test_bootstrap.py  test_icons.py  test_index.py  test_inject.py  test_pubsub.py  test_registry.py  test_server.py  test_watcher.py
video/: index.html  meta.json  package.json
(+16 files in other folders)
